# remix-of-remix-of-remix-of-remix-of-xpex-api-hub-87

./: .env  AGENT_API_REFERENCE.md  API_REFERENCE.md  ARCHITECTURE.md  BRAIN_LAYER.md  CHANGELOG.md  CONTRIBUTING.md  README.md  STRIPE_BILLING_FLOW.md  SYSTEM_ARCHITECTURE.md  SYSTEM_MANIFEST.md  index.html  package-lock.json  package.json  tailwind.config.ts
.storybook/: main.ts  preview.ts
public/: agent-api-openapi.json  bot-api-openapi.json  design-system.json  openapi.json
sdk/: README.md  package.json  tsconfig.json
sdk-go/: README.md  client.go  errors.go  go.mod  goldmail.go  types.go
sdk-python/: README.md  pyproject.toml
sdk-python/src/goldmail/: __init__.py  client.py  errors.py  types.py
sdk/src/: cli.ts  client.ts  errors.ts  index.ts  types.ts
sdk/src/__tests__/: client.test.ts  integration.test.ts
src/: App.tsx  index.css
src/__tests__/: bot-consumer.test.ts
src/components/: CreditPackages.tsx  CreditTopUpModal.tsx  DashboardSectionWrapper.tsx  Footer.tsx  HeroSection.tsx  LiveValidator.tsx  Navbar.tsx  ProductPortfolio.tsx
src/contexts/: CreditModalContext.tsx
src/hooks/: useAgentConsumer.tsx  useAuth.tsx  useBotConsumer.tsx  useBrain.tsx  useCredits.tsx  useEdgeFunctionWithRetry.tsx  useRetentionWebhooks.tsx  useSubscription.tsx  useValidationStats.tsx  useWebhooks.tsx
src/lib/: analytics.ts
src/pages/: Admin.tsx  Auth.tsx  Dashboard.tsx  DesignSystem.tsx  Docs.tsx  GoldEmailValidator.tsx  Marketplace.tsx  Pricing.tsx  RequestAccess.tsx
src/stories/: Badge.stories.tsx  Button.stories.tsx  Card.stories.tsx  Colors.stories.tsx  Input.stories.tsx  Progress.stories.tsx  Switch.stories.tsx  Typography.stories.tsx
supabase/: config.toml
(+77 files in other folders)
