[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpex-goldmail"
version = "1.0.0"
description = "Official Python SDK for XPEX Neural GoldMail Email Validation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "XPEX Neural", email = "sdk@xpexneural.com" }
]
keywords = [
    "email",
    "validation",
    "verification",
    "api",
    "xpex",
    "goldmail"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Typing :: Typed"
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://xpexneural.com/products/goldmail-api"
Documentation = "https://xpexneural.com/docs"
Repository = "https://github.com/xpex-neural/goldmail-sdk-python"
Issues = "https://github.com/xpex-neural/goldmail-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/goldmail"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
